@@ -1,7 +1,6 @@
 package se.skl.tp.vagval;
 
-import static java.util.Arrays.asList;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static se.skl.tp.vagval.util.RoutingInfoUtil.createRoutingInfo;
@@ -19,8 +18,11 @@ import static se.skl.tp.vagval.util.TestTakDataDefines.RIV21;
 
 import java.net.URL;
 import java.util.List;
-import org.junit.Before;
-import org.junit.Test;
+import java.util.Objects;
+
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
@@ -30,10 +32,9 @@ import se.skl.tp.hsa.cache.HsaCache;
 import se.skl.tp.hsa.cache.HsaCacheImpl;
 import se.skl.tp.vagval.logging.ThreadContextLogTrace;
 import se.skltp.takcache.RoutingInfo;
-import se.skltp.takcache.TakCache;
 import se.skltp.takcache.VagvalCache;
 
-public class DefaultRoutingTest {
+class DefaultRoutingTest {
 
   HsaCache hsaCache;
 
@@ -43,33 +44,40 @@ public class DefaultRoutingTest {
   VagvalHandlerImpl vagvalHandler;
   DefaultRoutingConfiguration defaultRoutingConfiguration;
 
-  @Before
-  public void beforeTest() {
-    MockitoAnnotations.openMocks(this);
+  AutoCloseable mocks;
+
+  @BeforeEach
+  void beforeTest() {
+    mocks = MockitoAnnotations.openMocks(this);
     hsaCache = new HsaCacheImpl();
-    URL url = getClass().getClassLoader().getResource("hsacache.xml");
-    URL urlHsaRoot = getClass().getClassLoader().getResource("hsacachecomplementary.xml");
+    URL url = Objects.requireNonNull(getClass().getClassLoader().getResource("hsacache.xml"));
+    URL urlHsaRoot = Objects.requireNonNull(getClass().getClassLoader().getResource("hsacachecomplementary.xml"));
     hsaCache.init(url.getFile(), urlHsaRoot.getFile());
     defaultRoutingConfiguration = new DefaultRoutingConfigurationImpl();
   }
 
+  @AfterEach
+  void afterTest() throws Exception {
+    mocks.close();
+  }
+
   @Test
-  public void testOneRoutingInfoFoundByDefaultReceiver() throws Exception {
+  void testOneRoutingInfoFoundByDefaultReceiver() {
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, DEFAULT_RECEIVER))
-        .thenReturn(asList(createRoutingInfo(ADDRESS_2, RIV20)));
+        .thenReturn(List.of(createRoutingInfo(ADDRESS_2, RIV20)));
 
     vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration );
 
     List<RoutingInfo> routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_1);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_2, routingInfoList.get(0).getAddress());
-    assertEquals(RIV20, routingInfoList.get(0).getRivProfile());
+    assertEquals(ADDRESS_2, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV20, routingInfoList.getFirst().getRivProfile());
   }
 
   @Test
-  public void testTraceLogWhenOneRoutingInfoFoundByDefaultReceiver() throws Exception {
+  void testTraceLogWhenOneRoutingInfoFoundByDefaultReceiver() {
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, DEFAULT_RECEIVER))
-        .thenReturn(asList(createRoutingInfo(ADDRESS_2, RIV20)));
+        .thenReturn(List.of(createRoutingInfo(ADDRESS_2, RIV20)));
 
     vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration);
 
@@ -80,34 +88,34 @@ public class DefaultRoutingTest {
   }
 
   @Test
-  public void testExplicitReceiverUsedBeforeDefaultRouting() throws Exception {
+  void testExplicitReceiverUsedBeforeDefaultRouting() {
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, DEFAULT_RECEIVER))
-        .thenReturn(asList(createRoutingInfo(ADDRESS_2, RIV20)));
+        .thenReturn(List.of(createRoutingInfo(ADDRESS_2, RIV20)));
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1))
-        .thenReturn(asList(createRoutingInfo(ADDRESS_1, RIV20)));
+        .thenReturn(List.of(createRoutingInfo(ADDRESS_1, RIV20)));
 
     vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration);
 
     List<RoutingInfo> routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_1);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_1, routingInfoList.get(0).getAddress());
-    assertEquals(RIV20, routingInfoList.get(0).getRivProfile());
+    assertEquals(ADDRESS_1, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV20, routingInfoList.getFirst().getRivProfile());
   }
 
   @Test
-  public void testFoundByHsaClimbingUsedBeforeDefaultRouting() throws Exception {
+  void testFoundByHsaClimbingUsedBeforeDefaultRouting() {
     Mockito.when(vagvalCache.getRoutingInfo(anyString(), eq(AUTHORIZED_RECEIVER_IN_HSA_TREE)))
-        .thenReturn(asList(createRoutingInfo(ADDRESS_2, RIV21)));
+        .thenReturn(List.of(createRoutingInfo(ADDRESS_2, RIV21)));
     Mockito.when(vagvalCache.getRoutingInfo(anyString(), eq(DEFAULT_RECEIVER)))
-        .thenReturn(asList(createRoutingInfo(ADDRESS_3, RIV21)));
+        .thenReturn(List.of(createRoutingInfo(ADDRESS_3, RIV21)));
 
     vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration);
 
     List<RoutingInfo> routingInfoList = vagvalHandler
         .getRoutingInfo(NAMNRYMD_1, CHILD_OF_AUTHORIZED_RECEIVER_IN_HSA_TREE);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_2, routingInfoList.get(0).getAddress());
-    assertEquals(RIV21, routingInfoList.get(0).getRivProfile());
+    assertEquals(ADDRESS_2, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV21, routingInfoList.getFirst().getRivProfile());
   }
 
 }
