@@ -1,20 +1,23 @@
 package se.skl.tp.vagval;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static se.skl.tp.vagval.util.RoutingInfoUtil.createRoutingInfo;
 import static se.skl.tp.vagval.util.TestTakDataDefines.ADDRESS_1;
 import static se.skl.tp.vagval.util.TestTakDataDefines.ADDRESS_2;
 import static se.skl.tp.vagval.util.TestTakDataDefines.NAMNRYMD_1;
 import static se.skl.tp.vagval.util.TestTakDataDefines.RECEIVER_1;
+import static se.skl.tp.vagval.util.TestTakDataDefines.RECEIVER_2;
 import static se.skl.tp.vagval.util.TestTakDataDefines.RIV20;
 import static se.skl.tp.vagval.util.TestTakDataDefines.RIV21;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import org.junit.Before;
-import org.junit.Test;
+
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
@@ -24,11 +27,10 @@ import se.skl.tp.hsa.cache.HsaCache;
 import se.skl.tp.hsa.cache.HsaCacheImpl;
 import se.skl.tp.vagval.logging.ThreadContextLogTrace;
 import se.skltp.takcache.RoutingInfo;
-import se.skltp.takcache.TakCache;
 import se.skltp.takcache.VagvalCache;
 
 
-public class VagvalHandlerTest {
+class VagvalHandlerTest {
 
   HsaCache hsaCache;
 
@@ -38,16 +40,23 @@ public class VagvalHandlerTest {
   VagvalHandlerImpl vagvalHandler;
   DefaultRoutingConfiguration defaultRoutingConfiguration;
 
-  @Before
-  public void beforeTest() {
-    MockitoAnnotations.openMocks(this);
+  AutoCloseable mocks;
+
+  @BeforeEach
+  void beforeTest() {
+    mocks = MockitoAnnotations.openMocks(this);
     hsaCache = new HsaCacheImpl();
     defaultRoutingConfiguration = new DefaultRoutingConfigurationImpl();
     defaultRoutingConfiguration.setDelimiter("#");
   }
 
+  @AfterEach
+  void afterTest() throws Exception {
+    mocks.close();
+  }
+
   @Test
-  public void testOneRoutingInfoFound() throws Exception {
+  void testOneRoutingInfoFound() {
     List<RoutingInfo> list = new ArrayList<>();
     list.add(createRoutingInfo(ADDRESS_1, RIV20));
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1)).thenReturn(list);
@@ -56,12 +65,12 @@ public class VagvalHandlerTest {
 
     List<RoutingInfo> routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_1);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_1, routingInfoList.get(0).getAddress());
-    assertEquals(RIV20, routingInfoList.get(0).getRivProfile());
+    assertEquals(ADDRESS_1, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV20, routingInfoList.getFirst().getRivProfile());
   }
 
   @Test
-  public void testOneRoutingInfoNoHsaCache() throws Exception {
+  void testOneRoutingInfoNoHsaCache() {
     List<RoutingInfo> list = new ArrayList<>();
     list.add(createRoutingInfo(ADDRESS_1, RIV20));
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1)).thenReturn(list);
@@ -70,12 +79,12 @@ public class VagvalHandlerTest {
 
     List<RoutingInfo> routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_1);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_1, routingInfoList.get(0).getAddress());
-    assertEquals(RIV20, routingInfoList.get(0).getRivProfile());
+    assertEquals(ADDRESS_1, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV20, routingInfoList.getFirst().getRivProfile());
   }
 
   @Test
-  public void testTraceLoggingOneRoutingInfoFound() throws Exception {
+  void testTraceLoggingOneRoutingInfoFound() {
     List<RoutingInfo> list = new ArrayList<>();
     list.add(createRoutingInfo(ADDRESS_1, RIV20));
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1)).thenReturn(list);
@@ -89,7 +98,7 @@ public class VagvalHandlerTest {
   }
 
   @Test
-  public void testTwoRoutingInfoFound() throws Exception {
+  void testTwoRoutingInfoFound() {
     List<RoutingInfo> list = new ArrayList<>();
     list.add(createRoutingInfo(ADDRESS_1, RIV20));
     list.add(createRoutingInfo(ADDRESS_2, RIV21));
@@ -107,9 +116,9 @@ public class VagvalHandlerTest {
   }
 
   @Test
-  public void testNoRoutingInfoFound() throws Exception {
+  void testNoRoutingInfoFound() {
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1))
-        .thenReturn(Collections.<RoutingInfo>emptyList());
+        .thenReturn(Collections.emptyList());
 
     vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration);
 
@@ -118,9 +127,9 @@ public class VagvalHandlerTest {
   }
 
   @Test
-  public void testTraceLoggingNoRoutingInfoFound() throws Exception {
+  void testTraceLoggingNoRoutingInfoFound() {
     Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1))
-        .thenReturn(Collections.<RoutingInfo>emptyList());
+        .thenReturn(Collections.emptyList());
 
     vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache, defaultRoutingConfiguration);
 
@@ -130,5 +139,21 @@ public class VagvalHandlerTest {
         ThreadContextLogTrace.get(ThreadContextLogTrace.ROUTER_RESOLVE_VAGVAL_TRACE));
   }
 
+  @Test
+  void testTwoParameterConstructor() {
+    List<RoutingInfo> list = new ArrayList<>();
+    list.add(createRoutingInfo(ADDRESS_1, RIV20));
+    Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1)).thenReturn(list);
+    Mockito.when(vagvalCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_2))
+        .thenReturn(Collections.emptyList());
 
+    vagvalHandler = new VagvalHandlerImpl(hsaCache, vagvalCache);
+
+    List<RoutingInfo> routingInfoList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_1);
+    assertEquals(1, routingInfoList.size());
+    assertEquals(ADDRESS_1, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV20, routingInfoList.getFirst().getRivProfile());
+    List<RoutingInfo> emptyList = vagvalHandler.getRoutingInfo(NAMNRYMD_1, RECEIVER_2);
+    assertTrue(emptyList.isEmpty());
+  }
 }
